# Rust-API-Bypass

./: .gitignore  .gitmodules  Cargo.toml  README.md  clean_and_run.sh
apron-sys/: Cargo.toml
pre_result/: filtered_sorted_output.txt  func_base.txt  manually_func.txt
src/: lib.rs
src/analysis/analyzer/: numerical_analysis.rs
src/analysis/memory/: constant_value.rs  known_names.rs
src/analysis/mir_visitor/: body_visitor.rs  call_visitor.rs  func_handler.rs
tests/checked_add/: Cargo.toml
tests/checked_add/src/: main.rs
tests/get/: Cargo.toml
tests/get/src/: main.mir  main.rs
tests/get_mut/: Cargo.toml
tests/split_at/src/: main.rs
tests/split_at_mut/: Cargo.toml
tests/split_at_mut/src/: main.rs
tests/swap/src/: main.rs
unchecked_method_base/: base.csv  base.csv.csv  collection.csv  origin_data.csv  unchecked_method_finder.py
unchecked_method_base/categories/: CString.csv  Result_Option.csv  complex.csv  index.csv  intrinsic_unexposed.csv  nonzero.csv  nullptr.csv  overflow.csv  type.csv
