[package]
name = "rust-mir-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-mir-checker"
path = "src/bin/cargo-mir-checker.rs"


[[bin]]
name = "mir-checker"
path = "src/bin/mir-checker.rs"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
cargo_metadata = "*"
pretty_env_logger = "0.5.0"
log = "0.4"
proc-macro2 = "1.0.95"
log-derive = "0.4.1"
failure = "0.1.8"
rug = "1.27.0"
foreign-types = "0.5.0"
libc = "0.2.174"
gmp-mpfr-sys = "1.6.5"
z3-sys = "0.8.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
az = "1.2.1"
serde_json = "1.0.140"
apron-sys = { path = "./apron-sys" }

[profile.release]
lto = true
