[package]
name = "apron-sys"
version = "0.1.0"
authors = ["Li Zhuohua <lizhuohua1994@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmp-mpfr-sys = "1.6.5"
libc = "0.2.174"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
bindgen = "0.66.1"
